contact model & service created + Holiday template added

--- a/src/main/resources/templates/contact.html
+++ b/src/main/resources/templates/contact.html
@@ -40,7 +40,7 @@
                                         class="contact-input" />
                                 </div>
                                 <div class="col-sm-6">
-                                    <input type="text" name="mobileNum" id="mobileNum" placeholder="Your Mobile Number"
+                                    <input type="text" name="mobile" id="mobileNum" placeholder="Your Mobile Number"
                                         class="contact-input" />
                                 </div>
                             </div>
