--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -19,7 +19,7 @@
                         </h3>
                         <p class="banner-sub">Active Learning, Expert Teachers & Safe Environment</p>
                         <div class="d-flex align-items-center buttons-banner">
-                            <a class="btn btn-style mt-lg-5 mt-4">Admission Now</a>
+                            <a th:href="@{/contact}" class="btn btn-style mt-lg-5 mt-4">Admission Now</a>
                         </div>
                     </div>
                     <div class="col-md-6 right-banner-2 text-end position-relative mt-md-0 mt-5">
@@ -310,7 +310,7 @@
                 </div>
             </div>
             <div class="text-center mt-sm-5 mt-4 pt-sm-0 pt-1">
-                <a class="btn btn-style btn-style-secondary mt-sm-3">
+                <a th:href="@{/courses}" class="btn btn-style btn-style-secondary mt-sm-3">
                     Browse more courses</a>
             </div>
         </div>
