--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -25,6 +25,15 @@
                         <li class="nav-item">
                             <a th:href="@{/contact}" class="nav-link">Contact</a>
                         </li>
+                         <li class="nav-item" sec:authorize="isAnonymous()">
+                            <a th:href="@{/loginn}" class="nav-link">LogIn</a>
+                        </li>
+                        <li class="nav-item" sec:authorize="isAuthenticated()">
+                            <a th:href="@{/dashboard}" class="nav-link">Dashboard</a>
+                        </li>
+                        <li class="nav-item" sec:authorize="isAuthenticated()">
+                            <a th:href="@{/logout}" class="nav-link">Logout</a>
+                        </li>
                     </ul>
                 </div>
                 <!-- toggle switch for light and dark theme -->
