--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -26,7 +26,7 @@
                             <a th:href="@{/contact}" class="nav-link">Contact</a>
                         </li>
                          <li class="nav-item" sec:authorize="isAnonymous()">
-                            <a th:href="@{/loginn}" class="nav-link">LogIn</a>
+                            <a th:href="@{/login}" class="nav-link">LogIn</a>
                         </li>
                         <li class="nav-item" sec:authorize="isAuthenticated()">
                             <a th:href="@{/dashboard}" class="nav-link">Dashboard</a>
