--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -14,10 +14,10 @@
                     <span class="navbar-toggler-icon fa icon-expand fa-bars"></span>
                     <span class="navbar-toggler-icon fa icon-close fa-times"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarScroll">
+                 <div class="collapse navbar-collapse" id="navbarScroll">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0 navbar-nav-scroll">
-                        <li class="nav-item">
-                            <a th:href="@{/home}" class="nav-link active" aria-current="page">Home</a>
+                        <li class="nav-item" sec:authorize="isAnonymous()">
+                            <a th:href="@{/home}" class="nav-link" aria-current="page">Home</a>
                         </li>
                         <li class="nav-item">
                             <a th:href="@{/courses}" class="nav-link">Courses</a>
@@ -25,7 +25,7 @@
                         <li class="nav-item">
                             <a th:href="@{/contact}" class="nav-link">Contact</a>
                         </li>
-                         <li class="nav-item" sec:authorize="isAnonymous()">
+                        <li class="nav-item">
                             <a th:href="@{/login}" class="nav-link">LogIn</a>
                         </li>
                         <li class="nav-item" sec:authorize="isAuthenticated()">
